--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,12 +7,12 @@
   --error: #e7195a;
 }
 body {
-  background: #f1f1f1;
+  background: #2400f3a9;
   margin: 0;
   font-family: "Poppins";
 }
 header {
-  background: #fff;
+  background: rgb(248, 127, 13);
 }
 header .container {
   max-width: 1400px;
@@ -23,7 +23,7 @@ header .container {
   justify-content: space-between;
 }
 header a {
-  color: #333;
+  color: rgb(255, 255, 255);
   text-decoration: none;
 }
 .pages{
@@ -42,7 +42,7 @@ header a {
 .workout-details {
   background: #fff;
   border-radius:50vw;
-  /* margin: 20px auto; */
+  margin: 20px auto;
   padding: 20px;
   display:flex;
   position: relative;
@@ -50,8 +50,9 @@ header a {
 }
 .workout-details>*{
   /* position: relative; */
-  width: 25%;
+  width: 20%;
   margin: auto;
+
 }
 .workout-details h4 {
   /* margin: 0 0 10px 0; */
@@ -59,30 +60,30 @@ header a {
   color: var(--primary);
 }
 .workout-details p {
-  /* margin: 0; */
   font-size: 0.9em;
   color: #555;
 }
-td{
-  background-color: rebeccapurple;
-}
+
 .workout-details span {
-  position: absolute;
+  /* position: absolute;
   top: 20px;
-  right: 20px;
+  right: 20px; */
   cursor: pointer;
-  background: #f1f1f1;
+  /* background: #f1f1f1; */
   padding: 6px;
   border-radius: 50%;
-  color: #333;
 }
 
-.material-symbols-rounded {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48
+.delete{
+  color: rgb(255, 20, 20);
+}
+.edit{
+  color: rgb(20, 255, 90);
+}
+
+.material-symbols-sharp {
+  width: 2vw;
+  height: 2vw;
 }
 
 /* new workout form */
