--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,13 +32,20 @@ header a {
   margin: 0 auto;
 }
 /* homepage */
-.home {
-  background-color: rgba(255, 255, 255, 0.596);
+.create {
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 1fr 3fr;
+}
+.upper{
+  display: flex;
+}
+
+.workouts {
+  background-color: rgba(255, 255, 255, 0.596);
   padding: 20px;
   gap: 10px;
 }
+
 .workout-details {
   background: #fff;
   border-radius:50vw;
@@ -48,11 +55,11 @@ header a {
   position: relative;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
 }
-.workout-details>*{
+.workout-details>*:not(.material-symbols-sharp){
   /* position: relative; */
   width: 20%;
   margin: auto;
-
+  background-color: rgb(255, 251, 0);
 }
 .workout-details h4 {
   /* margin: 0 0 10px 0; */
@@ -64,14 +71,14 @@ header a {
   color: #555;
 }
 
-.workout-details span {
-  /* position: absolute;
-  top: 20px;
-  right: 20px; */
+.material-symbols-sharp {
+  /* position: relative; */
   cursor: pointer;
+  margin: 0 12px;
   /* background: #f1f1f1; */
   padding: 6px;
   border-radius: 50%;
+
 }
 
 .delete{
@@ -79,11 +86,6 @@ header a {
 }
 .edit{
   color: rgb(20, 255, 90);
-}
-
-.material-symbols-sharp {
-  width: 2vw;
-  height: 2vw;
 }
 
 /* new workout form */
