--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,18 +32,48 @@ header a {
   margin: 0 auto;
 }
 /* homepage */
-.create {
+.create, .edit {
   display: grid;
   grid-template-columns: 1fr 3fr;
 }
 .upper{
-  display: flex;
+  display: grid;
+  grid-template-columns: 20vw auto auto;
+  align-items: center;
+  color: white;
+}
+.home-button{
+  height: 5vh;
+  text-decoration: none;
+  background-color: orange;
+  border-radius: 50px;
+  border: 0px;
+  color: blue;
+  text-transform: capitalize;
+  font-weight: bold;
+  font-size: 20px;
+  padding: 0 3vw;
+}
+.search{
+  /* position: flex; */
+  /* justify-content: right;` */
+  width: 10vw;
+  justify-content: right;
+  justify-self: right;
+}
+.add{
+  justify-self: left;
+}
+.semi-title{
+  font-size: 25px;
+  font-weight: bold;
 }
 
 .workouts {
   background-color: rgba(255, 255, 255, 0.596);
   padding: 20px;
   gap: 10px;
+  border-radius: 20px;
 }
 
 .workout-details {
@@ -55,11 +85,11 @@ header a {
   position: relative;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
 }
-.workout-details>*:not(.material-symbols-sharp){
+.workout-details>*{
   /* position: relative; */
   width: 20%;
   margin: auto;
-  background-color: rgb(255, 251, 0);
+  /* background-color: rgb(255, 251, 0); */
 }
 .workout-details h4 {
   /* margin: 0 0 10px 0; */
@@ -78,7 +108,10 @@ header a {
   /* background: #f1f1f1; */
   padding: 6px;
   border-radius: 50%;
-
+  width: 2%;
+}
+.material-symbols-sharp:active{
+  filter: invert(1);
 }
 
 .delete{
@@ -86,6 +119,9 @@ header a {
 }
 .edit{
   color: rgb(20, 255, 90);
+}
+.ed{
+  text-decoration: none;
 }
 
 /* new workout form */
@@ -101,7 +137,7 @@ input {
   border-radius: 4px;
   box-sizing: border-box;
 }
-form button {
+/* form button {
   background: var(--primary);
   border: 0;
   color: #fff;
@@ -109,7 +145,29 @@ form button {
   font-family: "Poppins";
   border-radius: 4px;
   cursor: pointer;
+} */
+
+.adedbuttons button{
+  border: 0;
+  padding: 5px 10px;
+  font-family: "Poppins";
+  font-size: 18px;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 40%;
+  margin: 0 5%;
 }
+
+.update{ 
+  background-color: #4CAF50;
+  color: white;
+
+}
+.cancel{
+  background-color: orangered;
+  color:white;
+}
+
 div.error {
   padding: 10px;
   background: #ffefef;
