--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,6 +10,17 @@ body {
   background: #2400f3a9;
   margin: 0;
   font-family: "Poppins";
+  background: url("./pic/background.jpg") 0% 0% / cover no-repeat; 
+  backdrop-filter: hue-rotate(40deg);
+}
+#bluebg{
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(38, 0, 255, 0.466);
+  
 }
 header {
   background: rgb(248, 127, 13);
@@ -21,6 +32,7 @@ header .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  color: white;
 }
 header a {
   color: rgb(255, 255, 255);
@@ -37,12 +49,17 @@ header a {
 }
 .create, .edits {
   display: grid;
-  grid-template-columns: 2fr 3fr;
-  margin: auto 10vw;
+  /* grid-template-columns: 2fr 3fr; */
+  margin: auto 18vw;
   background-color: rgba(255, 255, 255, 0.596);
   padding: 20px;
   gap: 10px;
   border-radius: 20px;
+}
+.imgsection{
+  display: grid;
+  justify-items: center;
+  margin-bottom: 2vh;
 }
 .upper{
   display: grid;
@@ -66,9 +83,9 @@ header a {
 .search{
   /* position: flex; */
   /* justify-content: right;` */
-  width: 10vw;
-  justify-content: right;
-  justify-self: right;
+  /* width: 10vw; */
+  /* justify-content: right;
+  justify-self: right; */
 }
 .add{
   justify-self: left;
@@ -210,4 +227,41 @@ input.error {
   text-decoration: none;
   color: blue;
   margin: 4vw 0;
+}
+
+#form {
+  background-color: rgb(248, 127, 13);
+  width: 300px;
+  height: 44px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+#query {
+  all: unset;
+  font: 16px system-ui;
+  color: #fff;
+  height: 100%;
+  width: 100%;
+  padding: 6px 10px;
+}
+::placeholder {
+  color: #fff;
+  opacity: 0.7; 
+}
+
+.searchbutton {
+  all: unset;
+  cursor: pointer;
+  width: 44px;
+  height: 44px;
+}
+
+svg {
+  color: #fff;
+  fill: currentColor;
+  width: 24px;
+  height: 24px;
+  padding: 10px;
 }
