--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,18 +11,20 @@ body {
   margin: 0;
   font-family: "Poppins";
   background: url("./pic/background.jpg"); 
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  backdrop-filter: hue-rotate(40deg);
+  background-attachment: fixed;
 }
 #bluebg{
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: -1;
-  height: 100vh;
   width: 100%;
-  background-color: rgba(38, 0, 255, 0.466);
+  height: 100vh;
   
+  background: rgba(38, 0, 255, 0.466);
+  background-attachment: fixed;
 }
 header {
   background: rgb(248, 127, 13);
@@ -61,7 +63,7 @@ header a {
 .imgsection{
   display: grid;
   justify-items: center;
-  margin-bottom: 2vh;
+  margin:   2vh;
 }
 .upper{
   display: grid;
