--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -33,7 +33,11 @@ body {
   background-attachment: fixed;
 }
 header {
-  background: rgb(248, 127, 13);
+  /* background: rgb(248, 127, 13); */
+  background-color: #ff5f03;
+  background-image: linear-gradient(62deg, #ff5f03 0%, #ffa500 100%);
+
+
 }
 header .container {
   max-width: 1400px;
@@ -47,6 +51,8 @@ header .container {
 header a {
   color: rgb(255, 255, 255);
   text-decoration: none;
+  min-width: 500px;
+  max-width: 800px;
 }
 .pages{
   padding: 20px;
@@ -80,7 +86,6 @@ header a {
   border: 0px;
   text-transform:uppercase;
   color: white;
-  font-weight: bold;
   font-size: 20px;
   padding: 0 1vw;
 }
@@ -140,10 +145,10 @@ header a {
 
 .material-symbols-sharp {
   cursor: pointer;
-  padding: 6px;
+  border-radius: 50px;
+  width: 25px;
+  text-align: center;
   margin: auto;
-  border-radius: 50%;
-  width: 2%;
 }
 
 .material-symbols-sharp:active{
@@ -222,13 +227,14 @@ input {
 }
 
 .camera .capture{
-  display: grid;
-  margin: 50vh 0 0 46.7%;
-  position: absolute;
   padding: 20px;
   background-color: rgba(85, 85, 85, 0.397);
   border-radius: 50px;
   border: 1px solid rgb(248, 248, 248);
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .camera .capture:hover{
@@ -238,7 +244,8 @@ input {
 
 .camera .capture:active{
   background-color: white;
-  transform: scale(110%);
+  top: 80%;
+  left: 50%;
 }
 
 .exit{
