--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 /* google font */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap");
 
 /* layout */
 :root {
@@ -10,34 +10,32 @@ body {
   background: #2400f3a9;
   margin: 0;
   font-family: "Poppins";
-  background: url("./pic/background.jpg"); 
+  background: url("./pic/background.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
 }
-.App{
+.App {
   margin: 0 auto;
   justify-content: center;
   align-content: center;
   overflow: hidden;
 }
-#bluebg{
+#bluebg {
   position: fixed;
   top: 0;
   z-index: -1;
   width: 100%;
   height: 100vh;
-  
+
   background: rgba(38, 0, 255, 0.466);
   background-attachment: fixed;
 }
 header {
   /* background: rgb(248, 127, 13); */
   background-color: #ff5f03;
-  background-image: linear-gradient(62deg, #ff5f03 0%, #ffa500 100%);
-
-
+  background-image: linear-gradient(145deg, #ff5f03 0%, #ffa500 100%);
 }
 header .container {
   max-width: 1400px;
@@ -54,18 +52,18 @@ header a {
   min-width: 500px;
   max-width: 800px;
 }
-.pages{
+.pages {
   padding: 20px;
   /* margin: 0 auto; */
 }
 /* homepage */
-.home{
+.home {
   margin: auto;
   min-width: 600px;
   max-width: 800px;
 }
 
-.upper{
+.upper {
   display: grid;
   grid-template-columns: auto auto auto;
   /* align-items: baseline; */
@@ -73,46 +71,46 @@ header a {
   color: white;
   margin: 0 0 5px;
 }
-.upper *{
+.upper * {
   margin: auto;
 }
 
 /* add button */
-.add-button{
+.add-button {
   height: 30px;
   text-decoration: none;
   background-color: rgb(248, 127, 13);
   border-radius: 50px;
   border: 0px;
-  text-transform:uppercase;
+  text-transform: uppercase;
   color: white;
   font-size: 20px;
   padding: 0 1vw;
 }
 
-.add{
+.add {
   justify-self: left;
 }
 
-.semi-title{
+.semi-title {
   font-size: 25px;
   font-weight: bold;
 }
 
-.heading{
+.heading {
   display: grid;
   grid-template-columns: 10% 30% 30% 10% 10% 10%;
   margin-bottom: -20px;
 }
 
-.hnum{
+.hnum {
   margin-left: 2vw;
 }
 
-.heading p{
+.heading p {
   font-size: 20px;
   color: rgb(248, 127, 13);
-  text-shadow:2px 2px 1px #555;
+  text-shadow: 2px 2px 1px #555;
   font-weight: bold;
 }
 
@@ -124,22 +122,22 @@ header a {
 
 .user-details {
   background: #fff;
-  border-radius:10px;
-  margin:  0 0 1vh 0;
+  border-radius: 10px;
+  margin: 0 0 1vh 0;
   padding: 1vh 0;
   display: grid;
-  grid-template-columns: 10% 30% 30% 10% 10% 10%;
-  box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
+  grid-template-columns: 10% 30% 25% 15% 10% 10%;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.05);
 }
-.user-details>*{
-  margin: auto 0; 
+.user-details > * {
+  margin: auto 0;
 }
 .user-details h4 {
   font-size: 1.1em;
   color: blue;
 }
 .user-details p {
-  font-size: .8em;
+  font-size: 0.7em;
   color: #555;
 }
 
@@ -151,18 +149,17 @@ header a {
   margin: auto;
 }
 
-.material-symbols-sharp:active{
+.material-symbols-sharp:active {
   filter: invert(1);
 }
 
-.delete{
+.delete {
   color: rgb(255, 20, 20);
 }
-.edit{
-  
+.edit {
   text-decoration: none;
 }
-.ed{
+.ed {
   color: rgb(39, 20, 255);
   text-decoration: none;
 }
@@ -180,7 +177,7 @@ header a {
 }
 
 input {
-  margin-left: 2px; 
+  margin-left: 2px;
   margin-right: 2px;
   padding: 10px;
   border: 1px solid rgb(255, 255, 255);
@@ -188,7 +185,7 @@ input {
 }
 
 /* button for adding image */
-.imgbtns{
+.imgbtns {
   display: grid;
   grid-template-columns: 40% auto 40%;
   align-content: center;
@@ -196,22 +193,22 @@ input {
   align-items: center;
 }
 
-.imgbtns *:not(span){
+.imgbtns *:not(span) {
   border: 1px solid rgb(255, 255, 255);
   padding: 10px 0;
   background-color: rgba(255, 255, 255, 0.596);
   border-radius: 8px;
 }
 
-.imgsection img{
-  margin-left: 2px; 
+.imgsection img {
+  margin-left: 2px;
   margin-right: 2px;
   position: relative;
   width: 400px;
 }
 
 /* camera */
-.camera{
+.camera {
   position: fixed;
   top: 0;
   left: 0;
@@ -220,13 +217,13 @@ input {
   display: grid;
   grid-row: auto;
   align-items: center;
-  background-color: rgba(0,0,0,0.9);
+  background-color: rgba(0, 0, 0, 0.9);
   align-items: center;
   justify-content: center;
   z-index: 1;
 }
 
-.camera .capture{
+.camera .capture {
   padding: 20px;
   background-color: rgba(85, 85, 85, 0.397);
   border-radius: 50px;
@@ -237,41 +234,41 @@ input {
   transform: translate(-50%, -50%);
 }
 
-.camera .capture:hover{
+.camera .capture:hover {
   cursor: pointer;
   background-color: rgba(144, 144, 144, 0.56);
 }
 
-.camera .capture:active{
+.camera .capture:active {
   background-color: white;
   top: 80%;
   left: 50%;
 }
 
-.exit{
-  position:absolute;
+.exit {
+  position: absolute;
   color: white;
   top: 10px;
   left: 10px;
   font-size: 50px;
 }
 
-.exit:hover{
+.exit:hover {
   cursor: pointer;
 }
 
-.webcam{
+.webcam {
   border: 1px solid white;
 }
 
 /* buttons add, update and cancel */
-.adedbuttons{
+.adedbuttons {
   display: grid;
   grid-template-columns: auto auto;
   gap: 10px;
 }
 
-.adedbuttons button{
+.adedbuttons button {
   border: 0;
   padding: 5px 10px;
   font-family: "Poppins";
@@ -280,14 +277,15 @@ input {
   cursor: pointer;
 }
 
-.update, .addx{ 
-  background-color: #4CAF50;
+.update,
+.addx {
+  background-color: #4caf50;
   color: white;
 }
 
-.cancel{
+.cancel {
   background-color: orangered;
-  color:white;
+  color: white;
 }
 
 /* errorn handling */
@@ -327,7 +325,7 @@ input.error {
 }
 ::placeholder {
   color: #fff;
-  opacity: 0.7; 
+  opacity: 0.7;
 }
 
 .searchbutton {
@@ -351,7 +349,7 @@ svg {
   counter-reset: css-counter 0; /* initializes counter to 0; use -1 for zero-based numbering */
 }
 
-.users .num{
+.users .num {
   margin-left: 2vw;
   counter-increment: css-counter 1; /* Increase the counter by 1. */
 }
@@ -363,37 +361,68 @@ svg {
 /* loading state */
 
 @keyframes ldio-cw45abrrsy-1 {
-  0% { top: 15.981999999999996px; height: 99.03600000000002px }
-  50% { top: 37.99px; height: 55.02px }
-  100% { top: 37.99px; height: 55.02px }
+  0% {
+    top: 15.981999999999996px;
+    height: 99.03600000000002px;
+  }
+  50% {
+    top: 37.99px;
+    height: 55.02px;
+  }
+  100% {
+    top: 37.99px;
+    height: 55.02px;
+  }
 }
 @keyframes ldio-cw45abrrsy-2 {
-  0% { top: 21.483999999999998px; height: 88.03200000000001px }
-  50% { top: 37.99px; height: 55.02px }
-  100% { top: 37.99px; height: 55.02px }
+  0% {
+    top: 21.483999999999998px;
+    height: 88.03200000000001px;
+  }
+  50% {
+    top: 37.99px;
+    height: 55.02px;
+  }
+  100% {
+    top: 37.99px;
+    height: 55.02px;
+  }
 }
 @keyframes ldio-cw45abrrsy-3 {
-  0% { top: 26.986000000000004px; height: 77.028px }
-  50% { top: 37.99px; height: 55.02px }
-  100% { top: 37.99px; height: 55.02px }
+  0% {
+    top: 26.986000000000004px;
+    height: 77.028px;
+  }
+  50% {
+    top: 37.99px;
+    height: 55.02px;
+  }
+  100% {
+    top: 37.99px;
+    height: 55.02px;
+  }
 }
-.ldio-cw45abrrsy div { position: absolute; width: 17.03px }.ldio-cw45abrrsy div:nth-child(1) {
+.ldio-cw45abrrsy div {
+  position: absolute;
+  width: 17.03px;
+}
+.ldio-cw45abrrsy div:nth-child(1) {
   left: 24.235px;
   background: rgb(248, 127, 13);
-  animation: ldio-cw45abrrsy-1 1s cubic-bezier(0,0.5,0.5,1) infinite;
-  animation-delay: -0.2s
+  animation: ldio-cw45abrrsy-1 1s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+  animation-delay: -0.2s;
 }
 .ldio-cw45abrrsy div:nth-child(2) {
   left: 56.985px;
-  background:rgb(248, 127, 13);
-  animation: ldio-cw45abrrsy-2 1s cubic-bezier(0,0.5,0.5,1) infinite;
-  animation-delay: -0.1s
+  background: rgb(248, 127, 13);
+  animation: ldio-cw45abrrsy-2 1s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+  animation-delay: -0.1s;
 }
 .ldio-cw45abrrsy div:nth-child(3) {
   left: 89.735px;
   background: rgb(248, 127, 13);
-  animation: ldio-cw45abrrsy-3 1s cubic-bezier(0,0.5,0.5,1) infinite;
-  animation-delay: undefineds
+  animation: ldio-cw45abrrsy-3 1s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+  animation-delay: undefineds;
 }
 
 .loadingio-spinner-pulse-k69qpabx8be {
@@ -411,10 +440,12 @@ svg {
   backface-visibility: hidden;
   transform-origin: 0 0; /* see note above */
 }
-.ldio-cw45abrrsy div { box-sizing: content-box; }
+.ldio-cw45abrrsy div {
+  box-sizing: content-box;
+}
 /* generated by https://loading.io/ */
-.loading{
-  display:grid;
+.loading {
+  display: grid;
   justify-content: center;
   align-items: center;
   top: 0;
