--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,8 +34,9 @@ body {
 }
 header {
   /* background: rgb(248, 127, 13); */
-  background-color: #ff5f03;
-  background-image: linear-gradient(145deg, #ff5f03 0%, #ffa500 100%);
+  background-color: #ff5c00;
+  background-image: linear-gradient(180deg, #ff5c00 0%, #1658ff59 100%);
+  
 }
 header .container {
   max-width: 1400px;
@@ -57,6 +58,10 @@ header a {
   /* margin: 0 auto; */
 }
 /* homepage */
+.h:active{
+  color: rgba(0, 0, 255, 0.761);
+}
+
 .home {
   margin: auto;
   min-width: 600px;
@@ -79,13 +84,26 @@ header a {
 .add-button {
   height: 30px;
   text-decoration: none;
-  background-color: rgb(248, 127, 13);
+  background-color: #ff5c00;
+  background-image: linear-gradient(180deg, #ff5c00 0%, #1658ff59 100%);
   border-radius: 50px;
   border: 0px;
   text-transform: uppercase;
+  width: 100px;
   color: white;
-  font-size: 20px;
-  padding: 0 1vw;
+  font-size: 1em;
+  font-weight: bold;
+  text-align: center;
+  padding: 5px 5px 3px 5px;
+}
+
+.add-button:active{
+  color: blue;
+  transform: scale(1.1);
+}
+.add-button:hover{
+  color: rgb(223, 223, 255);
+  box-shadow: 1px 1px 1px solid gray;
 }
 
 .add {
@@ -95,6 +113,7 @@ header a {
 .semi-title {
   font-size: 25px;
   font-weight: bold;
+  text-shadow: 3px 4px 5px gray;
 }
 
 .heading {
@@ -156,12 +175,27 @@ header a {
 .delete {
   color: rgb(255, 20, 20);
 }
+.delete:hover {
+  color: rgb(39, 20, 255);
+}
+.delete:active {
+  color: rgb(39, 20, 255);
+  transform: scale(1.1);
+}
+
 .edit {
   text-decoration: none;
 }
 .ed {
   color: rgb(39, 20, 255);
   text-decoration: none;
+}
+.ed:hover{
+  color: rgb(255, 20, 20);
+}
+.ed:hover{
+  color: rgb(255, 20, 20);
+  transform: scale(1.1);
 }
 
 /* add and edit form */
@@ -184,6 +218,11 @@ input {
   border-radius: 4px;
 }
 
+input:focus {
+  outline: none !important;
+  border:2px solid #ff5c00;
+    box-shadow: 0 0 10px #719ECE;
+}
 /* button for adding image */
 .imgbtns {
   display: grid;
@@ -264,7 +303,8 @@ input {
 /* buttons add, update and cancel */
 .adedbuttons {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto;
+  align-items: center;
   gap: 10px;
 }
 
@@ -282,9 +322,17 @@ input {
   background-color: #4caf50;
   color: white;
 }
+.addx:hover {
+  background-color: #2c7e2e;
+  color: white;
+}
 
 .cancel {
   background-color: orangered;
+  color: white;
+}
+.cancel:hover {
+  background-color: rgb(208, 55, 0);
   color: white;
 }
 
@@ -305,7 +353,9 @@ input.error {
 #searchform {
   display: grid;
   grid-template-columns: auto;
-  background-color: rgb(248, 127, 13);
+  background-color: #ff5c00;
+  background-image: linear-gradient(180deg, #ff5e00e2 0%, #1658ff59 100%);
+  box-shadow: 3px 3px 3px #0000005d;
   width: 300px;
   height: 44px;
   border-radius: 5px;
@@ -315,6 +365,23 @@ input.error {
   margin-left: auto;
   margin-right: 0;
 }
+#searchform:hover {
+  display: grid;
+  grid-template-columns: auto;
+  background-color: #ff5c00;
+  background-image: linear-gradient(180deg, #b84300e2 0%, #08329d59 100%);
+  box-shadow: 3px 3px 3px #0000005d;
+  width: 300px;
+  height: 44px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: auto;
+  margin-right: 0;
+}
+
+
 #query {
   all: unset;
   font: 16px system-ui;
@@ -490,6 +557,10 @@ nav a {
   background-color: #1aac8300;
   border: none;
   cursor: pointer;
+}
+.log:active{
+  color: rgba(0, 0, 255, 0.734);
+  transform: scale(1.1);
 }
 /* auth forms */
 form.signup, form.login {
